# Ingenieria-Informatica-UCO-2016-2020

./: .gitignore  README.md
EjerciciosSistemasOperativos/d/: Barbero.c  Decker.c  Fumador.c  Lamport.c  Museo.c  OtroFumador.c  Papa.c  Peterson.c  Practica1.c  Unisex.c  filosofos1.c  filosofos2.c  hilos.c  monitores.c  practica2.c  prioridadEscritores.c  prioridadLectores.c  prod1  prod1.c  prod1.c~  prod2  prod2.c  prod3.c  shmemory.c
EjerciciosSistemasOperativos/r/: AL-dekker.c  AL-lamport.c  AL-peterson.c  Babuinos.c  Baño.c  Museo-Jurasick.c  Museo-Jurasick2.c  barbero.c  barbero.c~  dekker.c  filosofos.c  filosofos2.c  fumadores.c  fumadores2.c  fumadores3.c  fumadoresrecurren.c  hilosDekker.c  hilosLamport.c  hilosPeterson.c  lavabo.c  lavabo2.c  lavabo3.c  museo.c  particulas.c  peterson.c  prioridadEscritores.c  prioridadLectores.c  producto hilos semaforos.c  producto2.c  producto3.c  producto4.c  producto5.c  producto6.c
Metaheuristica/CNP/: CMakeLists.txt  Makefile
Metaheuristica/CNP/ProgramasAuxiliares/: genInstance.cpp  grafo.cpp
Metaheuristica/CNP/instancias/: instance_100_30.txt  instance_100_60.txt  instance_50_30.txt  instance_50_60.txt  instance_75_30.txt  instance_75_60.txt
Metaheuristica/CNP/src/: CNPEvaluator.cpp  CNPInstance.cpp  CNPIteratedGreedy.cpp  CNPLocalSearch.cpp  CNPNodeAssignmentOperation.cpp  CNPObjectAssignmentOperation.cpp  CNPSimpleBestImprovementNO.cpp  CNPSimpleFirstImprovementNO.cpp  CNPSimulatedAnnealing.cpp  CNPSolGenerator.cpp  CNPSolution.cpp  CNPTabuSearch.cpp  funcionesAuxiliares.cpp  main.cpp
Metaheuristica/CNP/src/include/: CNPChangeOperation.h  CNPCrossoverOperator.h  CNPEvaluator.h  CNPGeneticAlgorithm.h  CNPInstance.h  CNPIteratedGreedy.h  CNPLocalSearch.h  CNPMetaheuristic.h  CNPMutationOperator.h  CNPNeighExplorer.h  CNPNodeAssignmentOperation.h  CNPObjectAssignmentOperation.h  CNPSimpleBestImprovementNO.h  CNPSimpleFirstImprovementNO.h  CNPSimulatedAnnealing.h  CNPSolGenerator.h  CNPSolution.h  CNPStopCondition.h  CNPTabuSearch.h  TournamentSelector.h  funcionesAuxiliares.h
Metaheuristica/Practica1/: README.md
Metaheuristica/Practica1/src/: CMakeLists.txt  MQKPEvaluator.cpp  MQKPInstance.cpp  MQKPSolGenerator.cpp  MQKPSolution.cpp  main.cpp
Metaheuristica/Practica1/src/include/: MQKPInstance.h  MQKPSolGenerator.h  MQKPSolution.h  Timer.h
Metaheuristica/Practica2/src/: CMakeLists.txt  MQKPEvaluator.cpp  MQKPInstance.cpp  MQKPLocalSearch.cpp  MQKPObjectAssignmentOperation.cpp  MQKPSimpleBestImprovementNO.cpp  MQKPSimpleFirstImprovementNO.cpp  MQKPSolGenerator.cpp  MQKPSolution.cpp  main.cpp
Metaheuristica/Practica2/src/include/: MQKPObjectAssignmentOperation.h  Timer.h
Metaheuristica/Practica3/: CMakeLists.txt  generar.sh  gnuplot.sh
Metaheuristica/Practica4/: CMakeLists.txt  generar.sh  gnuplot.sh
Metaheuristica/Practica4/src/: main.cpp
Metaheuristica/Practica4/src/include/: MQKPAntColonyOpt.h  MQKPCrossoverOperator.h  MQKPGeneticAlgorithm.h  MQKPMutationOperator.h  TournamentSelector.h
ProyectoSI/: build.xml
ProyectoSI/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
algoritmica/practica3/: CMakeLists.txt  Doxyfile  Makefile  entero.hpp  funcionesbajonivel.cpp  prueba
algoritmica/practica3/delaBarreraPerezCarlos_Practica3/: auxiliares.cpp  auxiliares.hpp  entero.cpp  funcionesbajonivel.hpp  main.cpp
algoritmica/practica3/delaBarreraPerezCarlos_Practica3/html/: annotated.html  auxiliares_8cpp.html  auxiliares_8cpp_source.html  auxiliares_8hpp.html  auxiliares_8hpp_source.html  classEntero-members.html  classEntero.html  classes.html  entero_8cpp.html  entero_8cpp_source.html  entero_8hpp.html  entero_8hpp_source.html  files.html  funcionesbajonivel_8cpp.html  funcionesbajonivel_8cpp_source.html  funcionesbajonivel_8hpp.html  funcionesbajonivel_8hpp_source.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  index.html  macros_8hpp.html  macros_8hpp_source.html  main_8cpp.html  main_8cpp_source.html  menudata.js
algoritmica/practica3/delaBarreraPerezCarlos_Practica3/html/search/: all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
algoritmica/practica3/p3github/: caracteres.c  funcionesaltonivel.cpp  funcionesaltonivel.hpp  funcionesbajonivel.cpp  funcionesbajonivel.hpp  main.cpp  practica3  programa
criptografia/: f1.m  fibonachi.m
ed/practica2/: 1  2  (+9 more)
mineriadedatos/: cuadernosjupyter.rar  funciones.py  principal.py
modelosComputacionales/: Practica1_CarlosdelaBarreraPerez.rar
redes/: buscaminasKurlos.cpp
vision/practica2/: CMakeLists.txt  Makefile  funciones.cpp  funciones.hpp  unsharp.cpp
vision/practica2/delaBarreraPerez/: funciones.cpp  unsharp.cpp
vision/practica2/practica2github/: .gitignore  FFT.cpp  FFT.hpp  Makefile  README.md  UnsharpMask.cpp  UnsharpMask.hpp
vision/practica5/delaBarreraPerez/: CMakeLists.txt  readme.txt
vision/practica5/delaBarreraPerez/models/: cat2_SIFTD_K2_keyWords150_ntrain20_ntest50_nrun15_classifier.yml  cat2_SIFTD_K2_keyWords150_ntrain20_ntest50_nrun15_dictionary.yml  cat2_SIFT_K2_keyWords150_ntrain20_ntest50_nrun15_classifier.yml  cat2_SIFT_K2_keyWords150_ntrain20_ntest50_nrun15_dictionaryyml  cat2_SURF_K2_keyWords150_ntrain20_ntest50_nrun15_classifier.yml  cat2_SURF_K2_keyWords150_ntrain20_ntest50_nrun15_dictionary.yml
vision/practica5/delaBarreraPerez/src/: common_code.cpp  train_bovw.cpp
vision/practica5/image_classifier_moodle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  common_code.hpp  test_bovw.cpp
(+1643 files in other folders)
